compiler/testData/cli/jvm/readingConfigFromEnvironment/overridingXx.kt
fun test(): Int {
    var res = 0
    for (x in 100 ..< 1) {
        res += x
    }
    return res
}
